<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/changing_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:orientation="vertical">

    </LinearLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_page_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:tabTextColor="@color/white"
        app:tabIndicatorColor="#FFFFFF"
        app:tabIndicatorGravity="top"
        app:tabIndicatorFullWidth="true">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/training"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/helper_AI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ai_helper" />

    </com.google.android.material.tabs.TabLayout>

</LinearLayout>