<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight=".5">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:background="@drawable/downward_curve"
                android:backgroundTint="#E48129"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="40dp"
                android:layout_weight=".4"
                android:text="@string/register"
                android:textSize="48sp"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight=".5"
            android:gravity="top"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@drawable/container_with_shadow">


                <EditText
                    android:id="@+id/username_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/username"
                    android:inputType="text"/>
                <EditText
                    android:id="@+id/password_regsister"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
                <EditText
                    android:id="@+id/confirm_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"/>
                <TextView
                    android:id="@+id/register_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/secondary_color"
                    android:text="@string/register"/>
                <TextView
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"/>
                <Button
                    android:id="@+id/to_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/main_color"
                    android:text="@string/login"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>