<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePage"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/frame_layout">

    <RelativeLayout
        android:layout_weight=".5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:src="@drawable/welcomeimage"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight=".5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="35dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/user_intro"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_message"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:justificationMode="inter_word"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/alreadyHaveAccount"
            android:layout_marginBottom="10dp">
            <ImageButton
                android:contentDescription="@string/getting_started"
                android:id="@+id/welcome_register_button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/square_button_main_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getting_started"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto"
                android:textSize="20sp"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already"
                android:fontFamily="@font/roboto"/>
            <TextView
                android:id="@+id/go_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in"
                android:paddingStart="10dp"
                android:textStyle="bold"
                android:textColor="@color/main_color"
                android:fontFamily="@font/roboto"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>