<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:id="@+id/login_container">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight=".5"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50sp"
                android:backgroundTint="@color/secondary_color"
                android:background="@drawable/downward_curve"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60sp"
                android:layout_marginRight="20dp"
                android:background="@drawable/downward_curve"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/login"
                android:textSize="48sp"
                android:textStyle="bold"
                android:layout_gravity="bottom"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:background="@drawable/loginexerciseimage"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight=".5"
            android:gravity="top"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@drawable/container_with_shadow">


                <EditText
                    android:id="@+id/username_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"/>
                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"/>
                <TextView
                    android:id="@+id/login_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:contentDescription="@string/login"
                        android:background="@drawable/square_button_main_color"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/roboto"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_marginVertical="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto"
                        android:text="@string/don_t_have_an_account"/>

                    <TextView
                        android:id="@+id/to_registration_button"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondary_color"
                        android:textStyle="bold"
                        android:text="Register"
                        android:fontFamily="@font/roboto"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>