<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExerciseHistory"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_history"
        android:textSize="24sp"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/secondary_color"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_history_for_the_month_of"
                android:textColor="@color/black"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/momth_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Month"
                android:layout_marginStart="5dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/main_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#F10622"
                android:text="@string/no_logs_found"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="5dp">
        <EditText
            android:id="@+id/log_message"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/gender_button"
            android:padding="10dp"
            android:layout_weight=".8"
            android:backgroundTint="#A3DFD8D8"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:hint="Enter Log"
            android:textColorHint="#6F4A0202"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2">

            <ImageButton
                android:id="@+id/submit_log"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/gradient_button"
                android:layout_centerInParent="true"
                android:layout_margin="2dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="8dp"/>
            <ImageView
                android:id="@+id/submit_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/submit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="15dp"/>
            <ProgressBar
                android:id="@+id/log_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="10dp"
                android:indeterminateTint="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</FrameLayout>